src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html, body {
        height: 100%;
        min-height: 100%
    }
    #root {
        height: 100%;
    }
    h5, h4, h3, h2, h1 {
        font-weight: 700
    }

}

@layer components {
    .centered-fixed {
        position: fixed;
        left: 0;
        transform: translate(calc(50vw - 50%));
    }
    
    @variants hover{
        .close-rotate {
            transform: rotate(360deg);
            transition: .5s;
        }
    }
    .main-grid {
        grid-template-rows: 50px 1fr;
        grid-template-columns: 250px 1fr;
    }
    .custom-textarea {
        @apply w-full bg-gray-700 border border-gray-400 rounded focus:ring-0 focus:border-gray-300 focus:outline-none px-2 py-3 text-gray-100 text-sm;
        resize: none;
        overflow-y: visible;
    }
    .recipient-results {
        width: calc(100% - 2rem);
        top: 50px;
    }
    
}

